--- a/blogpost-template-main/_config.yml
+++ b/blogpost-template-main/_config.yml
@@ -16,6 +16,15 @@ author:
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-toc
+
+# TOC Settings
+toc:
+  min_level: 1
+  max_level: 3
+  list_class: toc
+  list_class: toc__list
+  sublist_class: toc__sublist
 
 # Custom vars
 version:             1.1.0
