--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 requests~=2.32.3
 ipywidgets~=8.1.2
 matplotlib~=3.9.2
-pandas~=2.2.2
+pandas~=2.2.3
 seaborn~=0.13.2
 numpy~=1.26.4
 plotly~=5.24.1
@@ -11,3 +11,4 @@ altair
 networkx
 streamlit
 scipy
+wandb
