Update README.md + requirements.txt
installer module: pip install pipreqs

créer requirements : pipreqs ./project_root

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-requests~=2.32.3
-ipywidgets~=8.1.2
-matplotlib~=3.9.2
-pandas~=2.2.3
-seaborn~=0.13.2
-numpy~=1.26.4
-plotly~=5.24.1
-opencv-python~=4.10.0.84
-scikit-learn~=1.5.2
-altair
-networkx
-streamlit
-scipy
-wandb~=0.18.3
-torch~=2.5.1
-optuna~=4.1.0
-pytz~=2024.1
-pymysql
-cryptography==43.0.3
-xgboost==2.1.2
+Flask==3.1.0
+ipywidgets==8.1.5
+joblib==1.4.2
+matplotlib==3.10.0
+numpy==2.2.0
+opencv_python==4.10.0.84
+optuna==4.1.0
+pandas==2.2.3
+plotly==5.24.1
+python-dotenv==1.0.1
+pytz==2022.1
+Requests==2.32.3
+scikit_learn==1.6.0
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==75.6.0
+streamlit==1.41.1
+torch==2.5.1
+wandb==0.19.1
+waitress==3.0.2
