--- a/milestone3/Dockerfile.serving
+++ b/milestone3/Dockerfile.serving
@@ -8,7 +8,7 @@
 
 # https://docs.docker.com/engine/reference/builder/#from
 # You shouldn't need to change this
-FROM python:3.7
+FROM python:3.12
 
 # https://docs.docker.com/engine/reference/builder/#workdir
 # Create and cd into /code as your working directory
@@ -45,13 +45,17 @@ WORKDIR /code
 
 
 # TODO: add code, optionally a default model if you want 
-
+ADD ./serving/app.py ./app.py
+ADD ./serving/models/LogisticRegression_Distance.pkl ./models/LogisticRegression_Distance.pkl
 
 # TODO: install libs
-
+COPY ./requirements_new.txt ./requirements.txt
+RUN pip install -r requirements.txt
 
 # TODO: expose ports (or do this in docker-compose)
-
+EXPOSE 5000
+ENV WANDB_API_KEY=${WANDB_API_KEY}
 
 # TODO: specify default command - this is not required because you can always specify the command
 # either with the docker run command or in the docker-compose file
+CMD exec waitress-serve --listen=0.0.0.0:5000 app:app
