--- a/milestone3/docker-compose.yaml
+++ b/milestone3/docker-compose.yaml
@@ -1,18 +1,15 @@
 # docker-compose.yml
-version: '3'
-
+version: '4'
 services:
   serving:
     build:
       context: ./
       dockerfile: ./Dockerfile.serving
-#      args:
-#        ARG: <ARG>
-#    image: ift6758/serving:<TAG>
-#    ports:
-#      - <SERVING_PORT>:<SERVING_PORT>
-#    environment:
-#      DOCKER_ENV_VAR = ${LOCAL_ENV_VAR}
+    image: ift6758/serving
+    ports:
+      - 5000:5000
+    environment:
+      - WANDB_API_KEY=${WANDB_API_KEY}
 ###### Uncomment below when you're ready to add the final notebook container to your docker compose
 ##  streamlit:
 ##    build:
