streamlit docker is completed

--- a/milestone3/Dockerfile.streamlit
+++ b/milestone3/Dockerfile.streamlit
@@ -8,7 +8,7 @@
 
 # https://docs.docker.com/engine/reference/builder/#from
 # You shouldn't need to change this
-FROM python:3.7
+FROM python:3.12
 
 # https://docs.docker.com/engine/reference/builder/#workdir
 # Create and cd into /code as your working directory
@@ -45,13 +45,17 @@ WORKDIR /code
 
 
 # TODO: add code, optionally a default model if you want 
-
+ADD ./streamlit_app.py ./streamlit_app.py
+ADD ./ift6758/ift6758/client ./ift6758/ift6758/client
 
 # TODO: install libs
-
+COPY ./requirements_new.txt ./requirements.txt
+RUN pip install -r requirements.txt
 
 # TODO: expose ports (or do this in docker-compose)
-
+EXPOSE 4000
+ENV PROVIDER_SERVICE_IP_ADDRESS=${PROVIDER_SERVICE_IP_ADDRESS}
 
 # TODO: specify default command - this is not required because you can always specify the command
 # either with the docker run command or in the docker-compose file
+CMD streamlit run streamlit_app.py --server.port=4000 --server.address=0.0.0.0
