--- a/milestone3/docker-compose.yaml
+++ b/milestone3/docker-compose.yaml
@@ -10,18 +10,15 @@ services:
       - 5000:5000
     environment:
       - WANDB_API_KEY=${WANDB_API_KEY}
-###### Uncomment below when you're ready to add the final notebook container to your docker compose
-##  streamlit:
-##    build:
-##      context: ./
-##      dockerfile: ./Dockerfile.streamlit
-##      args:
-##        ARG: <ARG>
-##    image: ift6758/streamlit:<TAG>
-##    ports:
-##      - <STREAMLIT_PORT>:<STREAMLIT_PORT>
-##    environment:
-##      OTHER_DOCKER_ENV_VAR = ${OTHER_LOCAL_ENV_VAR}
+  streamlit:
+    build:
+      context: ./
+      dockerfile: ./Dockerfile.streamlit
+    image: ift6758/streamlit
+    ports:
+      - 4000:4000
+    environment:
+      - PROVIDER_SERVICE_IP_ADDRESS=serving
       
 
      
